Bug 378375 - Straight Line hotkey crashes Krita
Summary: Straight Line hotkey crashes Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.1.3-alpha
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 378427 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-04-02 18:13 UTC by Scott Petrovic
Modified: 2017-04-04 10:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Scott Petrovic 2017-04-02 18:13:19 UTC
This happens on master as well as the 3.1.3 alpha I believe. On Ubuntu 16.10

Going to the straight line tool and using it ok. If you are painting and press the "V" hotkey and try to draw a straight line, krita crashes.

here is the backtrace through GDB...


Thread 1 "krita" received signal SIGSEGV, Segmentation fault.
0x00007ffff5f94ec2 in QCoreApplicationPrivate::sendThroughApplicationEventFilters(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
(gdb) backtrace
#0  0x00007ffff5f94ec2 in QCoreApplicationPrivate::sendThroughApplicationEventFilters(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#1  0x00007ffff68d08e8 in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#2  0x00007ffff68d5d4f in QApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#3  0x00007ffff78b7c17 in KisApplication::notify (this=<optimized out>, receiver=0x55555c154140, 
    event=0x7fffff7ff5e0) at /home/scott/kf5/src/krita/libs/ui/KisApplication.cpp:542
#4  0x00007ffff5f953b0 in QCoreApplication::notifyInternal2(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007ffff69337fb in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#6  0x00007ffff68d08ac in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#7  0x00007ffff68d5d4f in QApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#8  0x00007ffff78b7c17 in KisApplication::notify (this=<optimized out>, receiver=0x55555d8be2d0, 
    event=0x7fffff7ff5e0) at /home/scott/kf5/src/krita/libs/ui/KisApplication.cpp:542
#9  0x00007ffff5f953b0 in QCoreApplication::notifyInternal2(QObject*, QEvent*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007ffff62f3de7 in QWindowPrivate::setCursor(QCursor const*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#11 0x00007ffff6901aef in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#12 0x00007ffff690bf79 in QWidget::setCursor(QCursor const&) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#13 0x00007ffff5fc2b49 in QMetaObject::activate(QObject*, int, int, void**) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007ffff2efa3c5 in KoToolBase::cursorChanged (this=this@entry=0x55555e231ff0, _t1=...)
    at /home/scott/kf5/build/libs/flake/moc_KoToolBase.cpp:252
#15 0x00007ffff2e18b4a in KoToolBase::useCursor (this=this@entry=0x55555e231ff0, cursor=...)
Comment 1 Scott Petrovic 2017-04-02 18:40:26 UTC
I reverted this commit and the crash seems to have gone away.

Fix a crash after switching tools while running color picking
ca1e6b45afd8d648deeec94257d0311d921ea0c0
Comment 2 Halla Rempt 2017-04-04 09:43:26 UTC
*** Bug 378427 has been marked as a duplicate of this bug. ***
Comment 3 Dmitry Kazakov 2017-04-04 10:29:10 UTC
Git commit 8f560f79b5ad72a7e71db4b50a4d42aa4c00ae33 by Dmitry Kazakov.
Committed on 04/04/2017 at 10:28.
Pushed by dkazakov into branch 'kazakov/svg-loading'.

Fix crash when using V shortcut for line tool

M  +10   -3    libs/ui/input/kis_tool_invocation_action.cpp

https://commits.kde.org/krita/8f560f79b5ad72a7e71db4b50a4d42aa4c00ae33
Comment 4 Halla Rempt 2017-04-04 10:36:30 UTC
Git commit 7207a8bd2099383dc409b85818bef6058db512c3 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 04/04/2017 at 10:36.
Pushed by rempt into branch 'krita/3.1'.

Fix crash when using V shortcut for line tool

M  +10   -3    libs/ui/input/kis_tool_invocation_action.cpp

https://commits.kde.org/krita/7207a8bd2099383dc409b85818bef6058db512c3