Fix crash when using V shortcut for line tool

BUG:378375